# server/src/public/swagger.yaml
@@ -8,12 +8,190 @@ servers:
     url: http://localhost:3000
 # API 요청 경로 및 데이터 세팅
 paths:
+  /blog:
+    post:
+      summary: 블로그 글을 생성한다.
+      description: Blog DB에 document를 삽입한다.
+      tags:
+        - 글 생성
+      requestBody:
+        description: request Body에 들어가야하는 data
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                userId:
+                  type: string
+                title:
+                  type: string
+                content:
+                  type: string
+                image:
+                  type: string
+            encoding:
+              image: # Property name
+                contentType: image/png, image/jpeg
+      responses:
+        "200":
+          description: "객체 (JSON). data는 블로그 글의 document다."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "글 생성 성공"
+                  data:
+                    type: object
+                    properties:
+                      _id:
+                        type: string
+                        example: "638c4fc4cf3aee101b9a07a7"
+                      user_id:
+                        type: string
+                        example: "638e521345bdef928e561303"
+                      title:
+                        type: string
+                        example: "글 제목"
+                      image:
+                        type: string
+                        example: "https://insopt-bucket123.s3.amazonaws.com/1234"
+                      content:
+                        type: string
+                        example: "글 내용"
+                      created_at:
+                        type: string
+                        example: "2022-12-04T07:44:04.106Z"
+                      __v:
+                        type: number
+                        example: 0
+        "400":
+          description: "객체 (JSON)"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "잘못된 요청입니다"
+        "500":
+          description: "객체 (JSON)"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "서버 내부 오류"
+    get:
+      summary: 모든 블로그 글을 조회한다.
+      description: Blog DB의 모든 document를 조회한다.
+      tags:
+        - 글 전체 조회
+      responses:
+        "200":
+          description: "객체 (JSON). data는 블로그 글의 document의 배열이다."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "글 목록 전체 조회 성공"
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        _id:
+                          type: string
+                          example: "638c4fc4cf3aee101b9a07a7"
+                        user_id:
+                          type: string
+                          example: "638e521345bdef928e561303"
+                        title:
+                          type: string
+                          example: "글 제목"
+                        image:
+                          type: string
+                          example: "https://insopt-bucket123.s3.amazonaws.com/1234"
+                        content:
+                          type: string
+                          example: "글 내용"
+                        created_at:
+                          type: string
+                          example: "2022-12-04T07:44:04.106Z"
+                        __v:
+                          type: number
+                          example: 0
+        "204":
+          description: "객체 (JSON)"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 204
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "글이 없습니다"
+        "500":
+          description: "객체 (JSON)"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "서버 내부 오류"
   /blog/{blogId}:
     put:
       summary: 블로그 글을 업데이트한다.
-      description: Blog DB의 title, content, image을 업데이트한다.
+      description: blogId를 통해 Blog DB의 title, content, image을 업데이트한다.
       tags:
-        - Put 방식
+        - 글 수정
       parameters:
         - name: blogId
           in: path
@@ -21,9 +199,26 @@ paths:
           required: true
           schema:
             type: string
+      requestBody:
+        description: request Body에 들어가야하는 data
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                content:
+                  type: string
+                image:
+                  type: string
+            encoding:
+              image: # Property name
+                contentType: image/png, image/jpeg
       responses:
         "200":
-          description: "객체 (JSON). data는 블로그 글의 스키마다."
+          description: "객체 (JSON). data는 블로그 글의 document다."
           content:
             application/json:
               schema:
@@ -46,18 +241,22 @@ paths:
                         example: "638c4fc4cf3aee101b9a07a7"
                       user_id:
                         type: string
+                        example: "638e521345bdef928e561303"
                       title:
                         type: string
+                        example: "글 제목"
                       image:
                         type: string
-                        example: "url"
+                        example: "https://insopt-bucket123.s3.amazonaws.com/1234"
                       content:
                         type: string
+                        example: "글 내용"
                       created_at:
                         type: string
                         example: "2022-12-04T07:44:04.106Z"
                       __v:
                         type: number
+                        example: 0
         "500":
           description: "객체 (JSON)"
           content:
@@ -76,9 +275,9 @@ paths:
                     example: "서버 내부 오류"
     delete:
       summary: 블로그 글을 삭제한다.
-      description: Blog DB의 title, content, image을 삭제한다.
+      description: blogId를 통해 Blog DB의 document를 삭제한다.
       tags:
-        - Delete 방식
+        - 글 삭제
       parameters:
         - name: blogId
           in: path
@@ -122,9 +321,9 @@ paths:
   /blog/{userId}:
     get:
       summary: 유저ID를 통해 유저별 블로그 글을 조회한다.
-      description: Blog DB의 title, content, image을 업데이트한다.
+      description: userId를 통해 Blog DB의 document를 조회한다.
       tags:
-        - Get 방식
+        - 유저ID를 통한 글 조회
       parameters:
         - name: userId
           in: path
@@ -134,7 +333,7 @@ paths:
             type: string
       responses:
         "200":
-          description: "객체 (JSON). data는 블로그 글의 스키마다."
+          description: "객체 (JSON). data는 블로그 글의 document의 배열이다."
           content:
             application/json:
               schema:
@@ -159,19 +358,108 @@ paths:
                           example: "638c4fc4cf3aee101b9a07a7"
                         user_id:
                           type: string
+                          example: "638e521345bdef928e561303"
                         title:
                           type: string
+                          example: "글 제목"
                         image:
                           type: string
-                          example: "url"
+                          example: "https://insopt-bucket123.s3.amazonaws.com/1234"
                         content:
                           type: string
+                          example: "글 내용"
                         created_at:
                           type: string
                           example: "2022-12-04T07:44:04.106Z"
                         __v:
                           type: number
                           example: 0
+        "500":
+          description: "객체 (JSON)"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 500
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "서버 내부 오류"
+  /blog/{blogId}/detail:
+    get:
+      summary: 블로그ID를 통해 블로그 글 하나를 조회한다.
+      description: 블로그ID를 통해 BlogDB에서 document를 조회한다.
+      tags:
+        - 블로그ID를 통한 글 조회
+      parameters:
+        - name: blogId
+          in: path
+          description: 글의 ID
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: "객체 (JSON). data는 블로그 글의 document다."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 200
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "특정 글 조회 성공"
+                  data:
+                    type: object
+                    properties:
+                      _id:
+                        type: string
+                        example: "638c4fc4cf3aee101b9a07a7"
+                      user_id:
+                        type: string
+                        example: "638e521345bdef928e561303"
+                      title:
+                        type: string
+                        example: "글 제목"
+                      image:
+                        type: string
+                        example: "https://insopt-bucket123.s3.amazonaws.com/1234"
+                      content:
+                        type: string
+                        example: "글 내용"
+                      created_at:
+                        type: string
+                        example: "2022-12-04T07:44:04.106Z"
+                      __v:
+                        type: number
+                        example: 0
+        "400":
+          description: "객체 (JSON)"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 400
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "잘못된 요청입니다."
         "500":
           description: "객체 (JSON)"
           content:
