# server/src/router/blogRouter.js
@@ -3,7 +3,7 @@ import { blogController } from "../controller/index.js";
 import upload from "../Loaders/upload.js";
 const blogRouter = Router();
 
-//여기서 upload.single("image") "image"는 client 에서 formdata에 append하는 키이름
+//여기서 upload.single("image") "image"는 client에서 formdata에 append하는 키이름
 blogRouter.post("/", upload.single("image"), blogController.createBlog);
 blogRouter.get("/", blogController.getAllBlog);
 
